Finish about section

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --secondary-color: #868139;
     --link-color: #d8d5d9;
     --link-visited-color: #F5E616;
+    --background-about: #6103ce;
 }
 
 body {
@@ -74,6 +75,25 @@ main {
     width: 100vw;
 }
 
+.about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--background-about);
+    padding: 20px;
+    max-width: 80%;
+    justify-items: center;
+    margin: 5% auto 0 auto;
+
+}
+
+#top {
+    grid-column-start: 2;
+}
+
+.skills {
+    grid-row-start: 2;
+}
+
 .projects section {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -106,7 +126,7 @@ footer {
 
 #logo {
     width: 30%;
-    margin: 5% auto 0 auto;
+    margin: 2% auto 0 auto;
 }
 
 footer p {
@@ -146,6 +166,11 @@ a:focus {
 
     #intro {
         font-size: 1em;
+    }
+
+    .about {
+        display: block;
+        background-color: var(--background-color);
     }
 
     .projects section {
